# shikshan-mantra-os-lap-desk

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  AGENTS.md  AGENT_CARD.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: builder.md  planner.md  reviewer.md
.claude/commands/: audit-verify.md  auto-task.md  iso-build.md  task-claim.md
.github/: CODEOWNERS.template  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  mergify.yml  renovate.json
.github/ISSUE_TEMPLATE/: adr-request.yml  agent-task.yml  bug.yml  config.yml  module-proposal.yml  security-incident.yml
.github/workflows/: ci-iso-build.yml
auto/: README.md  build  clean  config
branding/: README.md  tokens.json
branding/greeter/: README.md  slick-greeter.conf
config/: README.md
config/archives/: README.md  debian.list.chroot  debian.pref.chroot
config/bootloaders/: README.md
config/hooks/: README.md
config/includes.chroot/usr/share/shikshan/vidyarthi/: meson.build
config/includes.chroot/usr/share/shikshan/vidyarthi/data/ui/: window.blp
config/includes.chroot/usr/share/shikshan/vidyarthi/engines/code/: main.py  sandbox.bwrap  seccomp.json
config/includes.chroot/usr/share/shikshan/vidyarthi/engines/sql/: index.html  main.py  sandbox.bwrap  seccomp.json  sqlite-wasm.js
config/includes.chroot/usr/share/shikshan/vidyarthi/modulectl/: __init__.py  install.py  verify.py
config/includes.chroot/usr/share/shikshan/vidyarthi/src/: catalog.py  engine_client.py  main.py  runner.py  session.py  window.py  xapi.py
config/package-lists/: desktop-firefox.list.chroot  desktop-icewm-rescue.list.chroot  desktop-libreoffice.list.chroot  desktop-lxqt.list.chroot  firmware-hardware.list.chroot  installer-calamares.list.chroot  learning-kolibri.list.chroot  locale-hi-en.list.chroot  plymouth-shikshan.list.chroot  safety-filtering.list.chroot  vidyarthi.list.chroot
config/preseed/: calamares.cfg
debian/: changelog  control  copyright  rules
docs/: MODEL_CARD.md  glossary.md
docs/adr/: 0000-template-draft.md  0003-vendor-strategy.md  0006-release-artifact-layout.md  0007-live-build-config-flags.md  0008-qemu-smoke-criteria.md  0009-login-branding-auth.md  0010-bootloader-visual-identity.md  0011-engine-ipc.md  0012-frontend-stack.md  0013-kolibri-relationship.md  0014-xapi-telemetry.md  0015-sandbox-primitive.md  0016-authoring-roadmap.md  0017-content-backend-architecture.md  0018-vidyarthi-desktop-app.md  0019-code-engine-runtime.md  README.md
docs/architecture/: module-system.md  overview.md  progress-store.md  threat-model.md  vidyarthi-engine-rpc.md  (+1 more)
modules/: README.md
plans/: README.md
policies/: agent-allowlist.yml  escalation-matrix.yml  protected-paths.yml  sensitive-change-labels.yml  token-budgets.yml
releases/: README.md
scripts/: README.md
tasks/: README.md
tests/: README.md
ui/: README.md
(+244 files in other folders)
