[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shikshan-mantra-os-dev"
version = "0.0.0"
description = "Development dependencies for Shikshan Mantra OS"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "yamllint>=1.35,<2.0",
    "jsonschema>=4.21,<5.0",
    "pyyaml>=6.0.1,<7.0",
    "polib>=1.2,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
